fix layout problems

--- a/src/elements/FavoriteCard/style.css
+++ b/src/elements/FavoriteCard/style.css
@@ -1,20 +1,14 @@
 .favoriteCard{
-    display: flex;
-    flex-direction: column;
-    gap:5px;
-    margin-left: -35px;
+    display: block;
 }
 
 .imageFavoriteCard{
     border-radius: 30px;
-    
 }
 .likeButton{
-    position: relative;
-    right: 50px;
-    bottom: 10px;
     cursor: pointer;
     transition: 0.3s;
+    transform: translateY(-60px) translateX(10px);
 }
 .likeButton:hover{
     transform: scale(1.1);
@@ -26,4 +20,11 @@
 }
 .locationFavoriteCard{
     font-size: 16px;
+}
+.img-cnt{
+    display: flex;
+    flex-direction: column;
+}
+.tr-cnt{
+    transform: translateY(-40px);
 }
