--- a/src/elements/Header/style.css
+++ b/src/elements/Header/style.css
@@ -1,10 +1,13 @@
 .headerWrapper{
     height: 100px;
-    padding: 10px 50px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: calc(100%-100px); 
+}
+.padding{
+    padding-left: 50px;
+    padding-right: 50px;
+    width: calc(100% - 100px);
 }
 
 .iconWrapper{
